test/compile_errors/stage1/obj/issue_2032_compile_diagnostic_string_for_top_level_decl_type.zig
export fn entry() void {
    var foo: u32 = @This(){};
    _ = foo;
}

// compile diagnostic string for top level decl type (issue 2032)
//
// tmp.zig:2:27: error: type 'u32' does not support array initialization
